// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider setSelectedThemeKey: [ [Object] ] should change selected theme: default-light 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-light"
    >
      test-file-stub
    </style>
    <div>
      Child
    </div>
  </div>
</body>
`;

exports[`ThemeProvider setSelectedThemeKey: [ [Object] ] should change selected theme: themeA 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-dark"
    >
      test-file-stub
    </style>
    <style
      data-theme-key="themeA"
    />
    <div>
      Child
    </div>
  </div>
</body>
`;

exports[`ThemeProvider setSelectedThemeKey: null should change selected theme: default-light 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-light"
    >
      test-file-stub
    </style>
    <div>
      Child
    </div>
  </div>
</body>
`;

exports[`ThemeProvider setSelectedThemeKey: null should change selected theme: themeA 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-dark"
    >
      test-file-stub
    </style>
    <div>
      Child
    </div>
  </div>
</body>
`;
